# cse8080

./: CMakeLists.txt  README.md  cfg.dot  input.cpp  main.cpp  package-lock.json  package.json  tsconfig.json
classes/: CFGVisitor.hpp  MyASTConsumer.hpp  MyFrontendAction.hpp
src/: index.js  server.js
src/public/: index.html  loading.css  script.js  style.css
src/tests/: splitData.test.js
test/: CMakeLists.txt  Tests.cpp
